samples/_failures_safe/1761164608_fa2cc9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bc4bef24.c: In function ‘main’:
./samples/SAFE/__tmp_bc4bef24.c:184:5: error: expected expression at end of input
  184 |     char input[
      |     ^~~~
./samples/SAFE/__tmp_bc4bef24.c:184:5: error: expected declaration or statement at end of input
